--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,6 @@ services:
       MYSQL_DATABASE: redmine
     volumes:
       - ./volumes/mysql:/var/lib/mysql
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
