--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,12 @@ version: '3.1'
 services:
 
   redmine:
-    image: redmine
+    build:
+      context: ./redmine
     restart: always
+    # 프록시 서버가 사용될 예정
     ports:
-      - 3030:3000
+      - 3000:3000
     environment:
       REDMINE_DB_MYSQL: db
       REDMINE_DB_PASSWORD: example
@@ -14,13 +16,16 @@ services:
     volumes:
       - /data:/data
       - ./volumes/files:/usr/src/redmine/files
-      - ./configuration.yml:/usr/src/redmine/config/configuration.yml
+      - ./volumes/plugins:/usr/src/redmine/plugins
+      - ./volumes/themes:/usr/src/redmine/public/themes
     depends_on:
       - db
 
   db:
     image: mysql:5.7
     restart: always
+    ports:
+      - 3366:3306
     environment:
       MYSQL_ROOT_PASSWORD: example
       MYSQL_DATABASE: redmine
